# MFA_EngineTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
assets/engine/shaders/: ColorUtils.hlsl
assets/engine/shaders/flat_shading_pipeline/: FlatShadingPipeline.frag.hlsl  FlatShadingPipeline.frag.spv  FlatShadingPipeline.vert.hlsl  FlatShadingPipeline.vert.spv
assets/engine/shaders/line_pipeline/: LinePipeline.frag.hlsl  LinePipeline.frag.spv  LinePipeline.vert.hlsl  LinePipeline.vert.spv
assets/engine/shaders/point_pipeline/: PointPipeline.frag.hlsl  PointPipeline.frag.spv  PointPipeline.vert.hlsl  PointPipeline.vert.spv
assets/engine/shaders/text_overlay_pipeline/: TextOverlay.frag.hlsl  TextOverlay.frag.spv  TextOverlay.vert.hlsl  TextOverlay.vert.spv
assets/in-game-text/: TextOverlay.frag.spv  TextOverlay.vert.spv
assets/models/chess_bishop/: bishop.mtl
assets/models/fish/: license.txt  scene.gltf
assets/models/submarine/: license.txt  scene.gltf
engine/asset_system/: AssetGLTF_Mesh.cpp  AssetGLTF_Mesh.hpp  AssetGLTF_Model.cpp  AssetGLTF_Model.hpp  AssetShader.hpp  AssetTexture.cpp  AssetTexture.hpp  CMakeLists.txt
engine/bedrock/: BedrockAssert.hpp  BedrockCommon.hpp  BedrockFile.cpp  BedrockFile.hpp  BedrockLog.cpp  BedrockLog.hpp  BedrockMath.cpp  BedrockMath.hpp  BedrockMemory.hpp  BedrockPath.cpp  BedrockPath.hpp  BedrockPlatforms.hpp  BedrockRotation.cpp  BedrockRotation.hpp  BedrockSignal.hpp  BedrockSignalTypes.hpp  BedrockString.cpp  BedrockString.hpp  CMakeLists.txt
engine/entity_system/: CMakeLists.txt  Transform.cpp  Transform.hpp
engine/importer/: CMakeLists.txt  ImportGLTF.cpp  ImportGLTF.hpp  ImportObj.cpp  ImportObj.hpp  ImportShader.cpp  ImportShader.hpp  ImportTexture.cpp  ImportTexture.hpp  JsonUtils.hpp  imgui.ini
engine/job_system/: CMakeLists.txt  JobSystem.cpp  JobSystem.hpp  ScopeLock.cpp  ScopeLock.hpp  ScopeProfiler.cpp  ScopeProfiler.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
engine/libs/imgui/: CMakeLists.txt  imgui_impl_sdl.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
engine/libs/libconfig/: CMakeLists.txt  LibConfig.cpp
engine/libs/libconfig/stb_image/: CMakeLists.txt - not working
engine/physics/: CMakeLists.txt  Collision.cpp  Collision.hpp
engine/render_system/: BufferTracker.cpp  BufferTracker.hpp  CMakeLists.txt  DescriptorSetSchema.cpp  DescriptorSetSchema.hpp  LogicalDevice.cpp  LogicalDevice.hpp  RenderBackend.cpp  RenderBackend.hpp  RenderTypes.cpp  RenderTypes.hpp  UI.cpp  UI.hpp  imgui.ini
engine/render_system/camera/: ArcballCamera.cpp  ArcballCamera.hpp  ObserverCamera.cpp  ObserverCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
engine/render_system/pipeline/: BlinnPhongPipeline.cpp  BlinnPhongPipeline.hpp  FlatShadingPipeline.cpp  FlatShadingPipeline.hpp  LinePipeline.cpp  LinePipeline.hpp  PointPipeline.cpp  PointPipeline.hpp  TextOverlayPipeline.cpp  TextOverlayPipeline.hpp
engine/render_system/render_pass/: DisplayRenderPass.cpp  DisplayRenderPass.hpp  RenderPass.cpp  RenderPass.hpp
engine/render_system/render_resource/: DepthRenderResource.cpp  DepthRenderResource.hpp  MSAA_RenderResource.cpp  MSAA_RenderResource.hpp  RenderResource.cpp  SwapChainRenderResource.cpp  SwapChainRenderResource.hpp
engine/render_system/utils/: ConsolasFontRenderer.cpp  ConsolasFontRenderer.hpp  LineRenderer.cpp  LineRenderer.hpp  MeshInstance.cpp  MeshInstance.hpp  MeshRenderer.cpp  MeshRenderer.hpp  PointRenderer.cpp  PointRenderer.hpp
engine/sound_system/: CMakeLists.txt  SoundSystem.cpp  SoundSystem.hpp
executables/demoapp/: CMakeLists.txt  DemoAppMain.cpp
executables/in-game-text/: CMakeLists.txt  InGameTextApp.cpp  InGameTextApp.hpp  InGameTextMain.cpp  TextOverlayPipeline.cpp  TextOverlayPipeline.hpp
executables/mesh-viewer/: CMakeLists.txt  MeshViewerMain.cpp  imgui.ini
executables/sound/: CMakeLists.txt  SoundApp.cpp  SoundApp.hpp  SoundMain.cpp
executables/texture-mapping/: CMakeLists.txt  TextureMapping.cpp
